--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script scr="../js/products.js"></script>
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -36,8 +37,8 @@
       </div>
     </div>
   </nav>
-  <main class="pb-5 container">
-    <div class="container">
+  <main class="pb-5 container" id="getProducts-container">
+    <div class="container" >
       <div class="alert alert-danger text-center" role="alert">
         <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
       </div>
